--- a/app/src/main/res/layout/fragment_employee.xml
+++ b/app/src/main/res/layout/fragment_employee.xml
@@ -93,7 +93,7 @@
         android:inputType="textEmailAddress"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patronymicEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
 
     <EditText
         android:id="@+id/passwordEmployeeEditText"
@@ -108,5 +108,25 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/loginEmployeeEditText"
         tools:layout_editor_absoluteX="42dp" />
+
+    <TextView
+        android:id="@+id/titleCategoryTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/titleTheme"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:text="@string/text_title_category_employee"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/patronymicEditText" />
+
+    <Spinner
+        android:id="@+id/spinnerCategoriesServices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        app:layout_constraintTop_toBottomOf="@id/titleCategoryTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
