--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -25,6 +25,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleNameTextView" />
 
+    <TextView
+        android:id="@+id/titleCategoryServiceTextView"
+        android:text="@string/text_title_category_services"
+        android:theme="@style/titleTheme"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />
+
+    <Spinner
+        android:id="@+id/spinnerCategoriesServices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        app:layout_constraintTop_toBottomOf="@id/titleCategoryServiceTextView" />
+
     <NumberPicker
         android:id="@+id/hoursServiceNumberPicker"
         android:layout_width="wrap_content"
@@ -34,15 +54,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleCountHoursTextView" />
 
-    <!--<EditText
-        android:id="@+id/countHoursServiceEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />-->
 
     <TextView
         android:id="@+id/titleCountHoursTextView"
@@ -54,7 +65,7 @@
         android:theme="@style/titleTheme"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
 
     <TextView
         android:id="@+id/titleNameTextView"
