--- a/app/src/main/res/layout/fragment_car_detail.xml
+++ b/app/src/main/res/layout/fragment_car_detail.xml
@@ -17,9 +17,9 @@
         android:id="@+id/makeCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:ems="10"
         android:hint="@string/text_hint_make_car"
         android:inputType="text"
@@ -29,8 +29,8 @@
         android:id="@+id/modelCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:ems="10"
         android:hint="@string/text_hint_model_car"
         android:inputType="text"
@@ -44,7 +44,7 @@
         android:ems="10"
         android:hint="@string/text_number_car"
         android:inputType="textCapWords"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
         android:maxLength="6"
         app:layout_constraintEnd_toStartOf="@+id/numberRegionEditText"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,8 +54,8 @@
         android:id="@+id/yearCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:ems="10"
         android:hint="@string/text_hint_year_car"
         android:inputType="number"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:maxLength="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modelCarEditText"
