--- a/app/src/main/res/layout/fragment_detail_branch.xml
+++ b/app/src/main/res/layout/fragment_detail_branch.xml
@@ -22,9 +22,9 @@
             android:id="@+id/nameBranchEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:autofillHints="name"
             android:ems="10"
             android:hint="@string/text_hint_name_branch"
@@ -35,9 +35,9 @@
             android:id="@+id/addressEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:autofillHints="postalAddress"
             android:ems="10"
             android:hint="@string/text_address_name_branch"
@@ -50,9 +50,9 @@
             android:id="@+id/phoneBranchEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:autofillHints="phone"
             android:ems="10"
             android:hint="@string/text_phone_name_branch"
@@ -63,8 +63,8 @@
             android:id="@+id/startTimeTimePicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:timePickerMode="spinner"
 
             app:layout_constraintTop_toBottomOf="@+id/titleStartTimeTextView" />
@@ -73,8 +73,8 @@
             android:id="@+id/titleStartTimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:text="@string/text_title_start_time"
             android:theme="@style/titleTheme"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +84,8 @@
             android:id="@+id/endTimeTimePicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:timePickerMode="spinner"
             app:layout_constraintTop_toBottomOf="@+id/titleEndTimeTextView" />
 
@@ -93,8 +93,8 @@
             android:id="@+id/titleEndTimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginEnd="@dimen/main_end_margin"
             android:text="@string/text_title_end_time_text_view"
             android:theme="@style/titleTheme"
             app:layout_constraintStart_toStartOf="parent"
