--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -17,9 +17,9 @@
         android:id="@+id/nameServiceEditText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +29,9 @@
         android:id="@+id/titleCategoryServiceTextView"
         android:text="@string/text_title_category_services"
         android:theme="@style/titleTheme"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />
@@ -40,9 +40,9 @@
         android:id="@+id/spinnerCategoriesServices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         app:layout_constraintTop_toBottomOf="@id/titleCategoryServiceTextView" />
 
     <NumberPicker
@@ -59,7 +59,7 @@
         android:id="@+id/titleCountHoursTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
         android:layout_marginTop="16dp"
         android:text="@string/text_title_hours_service_TV"
         android:theme="@style/titleTheme"
@@ -71,9 +71,9 @@
         android:id="@+id/titleNameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_name_service_TV"
         android:theme="@style/titleTheme"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:id="@+id/priceServiceTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
         android:text="@string/text_title_price_service"
         android:theme="@style/titleTheme"
         app:layout_constraintHorizontal_bias="0.0"
@@ -94,9 +94,9 @@
         android:id="@+id/priceServiceEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
