--- a/app/src/main/res/layout/list_token.xml
+++ b/app/src/main/res/layout/list_token.xml
@@ -8,7 +8,7 @@
         android:id="@+id/prevWeekButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginTop="@dimen/main_margin_top"
         android:enabled="false"
         android:text="@string/text_prev_week_btn"
         app:layout_constraintEnd_toStartOf="@id/nextWeekButton"
@@ -19,7 +19,7 @@
         android:id="@+id/nextWeekButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginTop="@dimen/main_margin_top"
         android:text="@string/text_next_week_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/prevWeekButton"
@@ -29,9 +29,7 @@
         android:id="@+id/tokenRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginTop="@dimen/main_margin_top"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/nextWeekButton" />
