--- a/app/src/main/res/layout/fragment_catalog_services.xml
+++ b/app/src/main/res/layout/fragment_catalog_services.xml
@@ -1,110 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CatalogServicesFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/titleCategoryServiceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_categories_services"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include" />
 
-        <TextView
-            android:id="@+id/titleCategoryServiceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_categories_services"
-            android:theme="@style/valueTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/include" />
+    <TextView
+        android:id="@+id/addCategories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_add_textView"
+        android:theme="@style/actionTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleCategoryServiceTextView" />
 
-        <TextView
-            android:id="@+id/addCategories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:text="@string/text_add_textView"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:theme="@style/actionTextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleCategoryServiceTextView" />
-
-        <TextView
-            android:id="@+id/changeCategories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginStart="@dimen/mt_16dp"
-            android:text="@string/text_change_categories"
-            android:theme="@style/actionTextView"
-            app:layout_constraintStart_toEndOf="@+id/addCategories"
-            app:layout_constraintTop_toBottomOf="@+id/titleCategoryServiceTextView" />
+    <TextView
+        android:id="@+id/changeCategories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/mt_16dp"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_change_categories"
+        android:theme="@style/actionTextView"
+        app:layout_constraintStart_toEndOf="@+id/addCategories"
+        app:layout_constraintTop_toBottomOf="@+id/titleCategoryServiceTextView" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listServicesRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/titleListServicesTextView" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listServicesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/titleListServicesTextView" />
 
-        <TextView
-            android:id="@+id/titleListServicesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_services_text_view"
-            android:theme="@style/valueTheme"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
+    <TextView
+        android:id="@+id/titleListServicesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_services_text_view"
+        android:theme="@style/valueTheme"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
 
-        <TextView
-            android:id="@+id/addServicesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/mt_16dp"
-            android:text="@string/text_add_textView"
-            android:theme="@style/actionTextView"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
+    <TextView
+        android:id="@+id/addServicesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/mt_16dp"
+        android:text="@string/text_add_textView"
+        android:theme="@style/actionTextView"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
 
-        <ProgressBar
-            android:id="@+id/catalogServicesProgressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include" />
+    <ProgressBar
+        android:id="@+id/catalogServicesProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
-        <Spinner
-            android:id="@+id/spinnerCategoriesServices"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            app:layout_constraintTop_toBottomOf="@id/addCategories" />
+    <Spinner
+        android:id="@+id/spinnerCategoriesServices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        app:layout_constraintTop_toBottomOf="@id/addCategories" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
