--- a/app/src/main/res/layout/fragment_enroll.xml
+++ b/app/src/main/res/layout/fragment_enroll.xml
@@ -1,115 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EnrollFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/titleSelectCarTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_select_car_title"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include" />
 
-        <TextView
-            android:id="@+id/titleSelectCarTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_em_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_select_car_title"
-            android:theme="@style/valueTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/include" />
+    <Spinner
+        android:id="@+id/carSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        app:layout_constraintTop_toBottomOf="@id/titleSelectCarTextView" />
 
-        <Spinner
-            android:id="@+id/carSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_em_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            app:layout_constraintTop_toBottomOf="@id/titleSelectCarTextView" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/servicesListRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/titleSelectServicesTextView" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/servicesListRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_em_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/titleSelectServicesTextView" />
+    <Spinner
+        android:id="@+id/branchSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        app:layout_constraintTop_toBottomOf="@id/titleSelectBranchTextView" />
 
-        <Spinner
-            android:id="@+id/branchSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_em_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            app:layout_constraintTop_toBottomOf="@id/titleSelectBranchTextView" />
+    <TextView
+        android:id="@+id/sumPriceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/servicesListRecyclerView"
+        tools:text="Итого: 0 руб." />
 
-        <TextView
-            android:id="@+id/sumPriceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:theme="@style/valueTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/servicesListRecyclerView"
-            tools:text="Итого: 0 руб." />
+    <TextView
+        android:id="@+id/titleSelectBranchTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_select_branch"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carSpinner" />
 
-        <TextView
-            android:id="@+id/titleSelectBranchTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_select_branch"
-            android:theme="@style/valueTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/carSpinner" />
+    <TextView
+        android:id="@+id/titleSelectServicesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_select_service_text_view"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
 
-        <TextView
-            android:id="@+id/titleSelectServicesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_select_service_text_view"
-            android:theme="@style/valueTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesServices" />
+    <TextView
+        android:id="@+id/selectCategoriesServicesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_select_category"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/branchSpinner" />
 
-        <TextView
-            android:id="@+id/selectCategoriesServicesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:theme="@style/valueTheme"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:text="@string/text_title_select_category"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/branchSpinner" />
+    <Spinner
+        android:id="@+id/spinnerCategoriesServices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        app:layout_constraintTop_toBottomOf="@id/selectCategoriesServicesTextView" />
 
-        <Spinner
-            android:id="@+id/spinnerCategoriesServices"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
-            app:layout_constraintTop_toBottomOf="@id/selectCategoriesServicesTextView" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.core.widget.NestedScrollView>
