--- a/app/src/main/res/layout/fragment_list_token_admin.xml
+++ b/app/src/main/res/layout/fragment_list_token_admin.xml
@@ -1,45 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListTokenAdminFragment"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    tools:context=".ListTokenAdminFragment">
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/titleBranchTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/text_title_branch_text_view"
+        android:theme="@style/valueTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
-        <TextView
-            android:id="@+id/titleBranchTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:theme="@style/valueTheme"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:text="@string/text_title_branch_text_view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include" />
+    <Spinner
+        android:id="@+id/spinnerListToken"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        app:layout_constraintTop_toBottomOf="@+id/titleBranchTextView" />
 
-        <Spinner
-            android:id="@+id/spinnerListToken"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            app:layout_constraintTop_toBottomOf="@+id/titleBranchTextView" />
-
-        <include
-            android:id="@+id/includeLisToken"
-            layout="@layout/list_token"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerListToken" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+    <include
+        android:id="@+id/includeLisToken"
+        layout="@layout/list_token"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/main_margin_top"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerListToken" />
+</androidx.constraintlayout.widget.ConstraintLayout>
