--- a/app/src/main/res/layout/fragment_select_date_time.xml
+++ b/app/src/main/res/layout/fragment_select_date_time.xml
@@ -35,14 +35,6 @@
         app:layout_constraintStart_toEndOf="@id/prevWeekButton"
         app:layout_constraintTop_toBottomOf="@id/include" />
 
-    <Spinner
-        android:id="@+id/dateTimeSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
-        app:layout_constraintTop_toBottomOf="@+id/selectDateTimeTextView" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -57,16 +49,16 @@
         android:id="@+id/listEmployeeSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         app:layout_constraintTop_toBottomOf="@+id/titleSelectEmployeeTextView" />
 
     <TextView
         android:id="@+id/titleSelectEmployeeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
         android:layout_marginTop="@dimen/mt_16dp"
         android:text="@string/text_title_select_employee_text_view"
         android:theme="@style/valueTheme"
@@ -76,13 +68,13 @@
     <TextView
         android:id="@+id/selectDateTimeTextView"
         android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
         android:text="@string/text_select_text_view"
         android:theme="@style/valueTheme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listEmployeeSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/titleCompleteTextView" />
 
     <TextView
         android:id="@+id/messageTextView"
@@ -93,4 +85,40 @@
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listTokenRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectDateTimeTextView"
+        app:layout_constraintVertical_bias="0.054" />
+
+    <TextView
+        android:id="@+id/titleCompleteTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/valueTheme"
+        android:text="Выполнение:"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listEmployeeSpinner" />
+
+    <TextView
+        android:id="@+id/timeCompleteTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        tools:text="4 д. 3 ч."
+        android:theme="@style/valueTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listEmployeeSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
