--- a/app/src/main/res/layout/fragment_token_detail.xml
+++ b/app/src/main/res/layout/fragment_token_detail.xml
@@ -18,9 +18,9 @@
         android:id="@+id/titleStartDateTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_dateTime_TV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -31,8 +31,8 @@
         android:id="@+id/startDateTimeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,8 +43,8 @@
         android:id="@+id/titleBranchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_branch_TV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -55,8 +55,8 @@
         android:id="@+id/branchTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +67,8 @@
         android:id="@+id/titleEmployeeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_employee_tV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -79,8 +79,8 @@
         android:id="@+id/employeeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,8 +91,8 @@
         android:id="@+id/titleCarTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_cat_TV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -103,8 +103,8 @@
         android:id="@+id/carTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,8 +115,8 @@
         android:id="@+id/titleServicesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_Services_TV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -127,8 +127,8 @@
         android:id="@+id/servicesTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,8 +150,8 @@
         android:id="@+id/titlePriceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:text="@string/text_title_price_tV"
         android:theme="@style/titleTheme"
         android:visibility="gone"
@@ -162,8 +162,8 @@
         android:id="@+id/priceTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         android:theme="@style/valueTheme"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/titlePriceTextView"
