--- a/app/src/main/res/layout/item_car_list.xml
+++ b/app/src/main/res/layout/item_car_list.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/branch_mt_8dp"
-    android:layout_marginStart="@dimen/branch_sm_8dp"
-    android:layout_marginEnd="@dimen/branch_em_8dp"
+    android:layout_marginTop="@dimen/main_margin_top"
+    android:layout_marginStart="@dimen/main_start_margin"
+    android:layout_marginEnd="@dimen/main_end_margin"
     android:theme="@style/CardViewTheme"
     android:layout_marginBottom="@dimen/mt_16dp"
     android:layout_height="wrap_content">
@@ -19,7 +19,7 @@
             android:layout_height="150dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginEnd="@dimen/main_end_margin"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_automobile_1300231"
             android:contentDescription="@string/desc_icon_image_view" />
@@ -28,9 +28,9 @@
             android:id="@+id/makeCarTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
+            android:layout_marginEnd="@dimen/main_end_margin"
             tools:text="BMW"
             android:theme="@style/valueTheme"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -41,9 +41,9 @@
             android:id="@+id/modelCarTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
-            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
+            android:layout_marginEnd="@dimen/main_end_margin"
             tools:text="M6"
             android:theme="@style/valueTheme"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -54,8 +54,8 @@
             android:id="@+id/numberCatTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
             tools:text="А692ЕМ 73"
             android:theme="@style/titleTheme"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:theme="@style/titleTheme"
-            android:layout_marginStart="@dimen/branch_sm_8dp"
-            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:layout_marginStart="@dimen/main_start_margin"
+            android:layout_marginTop="@dimen/main_margin_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/mt_16dp"
