--- a/app/src/main/res/layout/item_service_rv.xml
+++ b/app/src/main/res/layout/item_service_rv.xml
@@ -36,7 +36,7 @@
     <View
         android:layout_width="match_parent"
         android:background="@color/design_default_color_primary"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginTop="@dimen/main_margin_top"
         app:layout_constraintTop_toBottomOf="@id/priceServiceTextView"
         android:layout_height="1dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
