--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,9 +5,9 @@
     <dimen name="me_splash_btn">40dp</dimen>
     <dimen name="mb_admin_btn">50dp</dimen>
     <dimen name="width_icon_splash_screen">150dp</dimen>
-    <dimen name="branch_sm_8dp">8dp</dimen>
-    <dimen name="branch_em_8dp">8dp</dimen>
-    <dimen name="branch_mt_8dp">8dp</dimen>
+    <dimen name="main_start_margin">16dp</dimen>
+    <dimen name="main_end_margin">16dp</dimen>
+    <dimen name="main_margin_top">16dp</dimen>
     <dimen name="mt_16dp">16dp</dimen>
     <dimen name="width_icon_user">120dp</dimen>
     <dimen name="corner_radius_8dp">8dp</dimen>
@@ -16,4 +16,5 @@
     <dimen name="width_icon_branch">100dp</dimen>
     <dimen name="width_icon_car">150dp</dimen>
     <dimen name="height_icon_profile_image_view">200dp</dimen>
+    <dimen name="height_bottom_bar">60dp</dimen>
 </resources>
